--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 
 name = "clang-sys"
-authors = ["Kyle Mayes <kyle@mayeses.com>"]
+authors = ["Kyle Mayes <kyle@mayeses.com>", "Mingjun Yin <myin013@ucr.edu>"]
 
-version = "0.28.1"
+version = "0.28.2"
 
 readme = "README.md"
 license = "Apache-2.0"
